# game

./: CMakeLists.txt
include/: shader.h  vertex_array.h
shader/: vertex.glsl
src/: main.c  shader.c
